// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable passes style properly with highlight feedback 1`] = `
<RectButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
  underlayColor={undefined}
>
  <View />
</RectButton>
`;

exports[`Touchable passes style properly with native feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</BaseButton>
`;

exports[`Touchable passes style properly with none feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</BaseButton>
`;

exports[`Touchable passes style properly with opacity feedback 1`] = `
<BorderlessButton
  activeOpacity={undefined}
  borderless={false}
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</BorderlessButton>
`;

exports[`Touchable renders correctly with highlight feedback 1`] = `
<RectButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  underlayColor={undefined}
>
  <View />
</RectButton>
`;

exports[`Touchable renders correctly with native feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
</BaseButton>
`;

exports[`Touchable renders correctly with none feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
</BaseButton>
`;

exports[`Touchable renders correctly with opacity feedback 1`] = `
<BorderlessButton
  activeOpacity={undefined}
  borderless={false}
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
</BorderlessButton>
`;

exports[`Touchable supports multiple children with highlight feedback 1`] = `
<RectButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
  underlayColor={undefined}
>
  <View />
  <View />
  <View />
  <View />
</RectButton>
`;

exports[`Touchable supports multiple children with native feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
  <View />
  <View />
  <View />
</BaseButton>
`;

exports[`Touchable supports multiple children with none feedback 1`] = `
<BaseButton
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
  <View />
  <View />
  <View />
</BaseButton>
`;

exports[`Touchable supports multiple children with opacity feedback 1`] = `
<BorderlessButton
  activeOpacity={undefined}
  borderless={false}
  enabled={true}
  hitSlop={undefined}
  native={true}
  onPress={undefined}
>
  <View />
  <View />
  <View />
  <View />
</BorderlessButton>
`;
